@@ -2,6 +2,7 @@ package org.socialgame.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -27,14 +28,29 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Habilita CORS global
-                .csrf(csrf -> csrf.disable()) // Desactiva CSRF (vital para apps móviles)
+                // 1. Aplicamos CORS antes de cualquier filtro de seguridad
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // 2. Desactivamos CSRF por completo (vital para peticiones POST desde Android)
+                .csrf(csrf -> csrf.disable())
+
+                // 3. Permitimos que el emulador cargue la API sin sesiones de navegador
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 4. Autorización: Abrimos TODAS las rutas temporalmente para matar el 403
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll() // Puerta abierta al login/registro
-                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**").permitAll()
-                        .anyRequest().authenticated()
-                );
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/users/**").permitAll()
+                        .requestMatchers("/api/posts/**").permitAll() // Incluimos la nueva entidad Post
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+                        .anyRequest().permitAll() // Permitimos TODO para descartar que sea el "portero"
+                )
+
+                // 5. Desactivamos protecciones de cabeceras que bloquean emuladores
+                .headers(headers -> headers.frameOptions(f -> f.disable()))
+
+                // 6. Configuramos la respuesta para cuando algo falle
+                .httpBasic(Customizer.withDefaults());
 
         return http.build();
     }
@@ -42,10 +58,30 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Permite cualquier origen (emulador, postman, etc)
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(false);
+
+        // Android Emulator a veces se identifica de formas raras, permitimos todo origen patrón
+        configuration.setAllowedOriginPatterns(List.of("*"));
+
+        // Métodos permitidos
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+
+        // Cabeceras permitidas (incluyendo las que envía Retrofit)
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+
+        // Importante: Si AllowCredentials es true, no podemos usar "*" puro en allowedOrigins
+        configuration.setAllowCredentials(true);
+
+        // Tiempo que el navegador/cliente guarda la configuración de CORS
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
